--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Quiz</string>
     <string name="quiz_app">QuizApplication</string>
+    <string name="please_enter_username">لطفا نام کاربری خود را وارد کنید</string>
 </resources>
